# cognitive-mdm

./: .env.example  .gitignore  Makefile  README.md  dev_server.py  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
data/samples/: customers.csv  suppliers.csv
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: CopilotBar.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/lib/: api.ts
infra/helm/cognitive-mdm/: Chart.yaml  values.yaml
infra/kubernetes/base/: configmap.yaml  deployments.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  services.yaml
infra/observability/: prometheus.yml
scripts/: seed.py
services/agent-service/: Dockerfile  requirements.txt
services/agent-service/src/: main.py
services/api-gateway/: Dockerfile  pyproject.toml  requirements.txt
services/api-gateway/src/: main.py
services/api-gateway/src/middleware/: auth.py  rate_limit.py
services/api-gateway/src/routes/: agents.py  copilot.py  entities.py  governance.py  graph.py  health.py  ingestion.py
services/copilot-service/: Dockerfile  requirements.txt
services/entity-resolution/: Dockerfile  pyproject.toml  requirements.txt
services/governance-service/: Dockerfile  requirements.txt
services/graph-service/: Dockerfile  requirements.txt
services/ingestion-service/: Dockerfile  requirements.txt
services/semantic-engine/: Dockerfile  requirements.txt
shared/models/: __init__.py  entity.py  events.py
shared/proto/: entity.proto
(+71 files in other folders)
