[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognitive-mdm-api-gateway"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "httpx==0.26.0",
    "python-jose[cryptography]==3.3.0",
    "redis[asyncio]==5.0.1",
    "structlog==24.1.0",
    "pydantic==2.6.0",
    "prometheus-client==0.19.0",
    "opentelemetry-sdk==1.22.0",
    "opentelemetry-instrumentation-fastapi==0.43b0",
    "python-multipart==0.0.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
